bug fixes and performance fixes